app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-openshift
spec:
  replicas: 4
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
      - image: docker.io/openshift/hello-openshift
        name: hello-openshift
        ports:
        - containerPort: 8080
