app/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dev-app
  namespace: argo
  labels:
    app.kubernetes.io/instance: dev-app
spec:
  to:
    kind: Service
    name: hello-openshift
  tls: {}
  host: dev-app.apps.ocp4-dc.virtus.corp
  port:
    targetPort: 8080
